<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_height="match_parent"
              android:layout_width="match_parent" xmlns:app="http://schemas.android.com/apk/res-auto"
              android:orientation="vertical">

    <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/text_input_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:errorEnabled="true">


        <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edit_text"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:hint="@string/calcSomething"
                android:inputType="none"
        />

    </com.google.android.material.textfield.TextInputLayout>

    <Button android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:layout_marginHorizontal="8dp"
            android:id="@+id/key_doClear"
            android:text="@string/key_doClear"
            android:layout_columnWeight="1"
    />

    <GridLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:columnCount="2"
            android:useDefaultMargins="true">

        <include layout="@layout/number_panel"
                 android:layout_width="wrap_content"
                 android:layout_height="match_parent"
                 android:layout_columnWeight="1"
        />

        <include layout="@layout/operation_panel"
                 android:layout_width="wrap_content"
                 android:layout_height="match_parent"
                 android:layout_columnWeight="1"
        />

    </GridLayout>

    <Button android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:layout_marginHorizontal="8dp"
            android:id="@+id/key_doCalc"
            android:text="@string/key_doCalc"
            android:layout_columnWeight="1"
    />

</LinearLayout>